<resources>
    <string name="app_name">Lunar Locator</string>
    <string name="moon_rise_text_view">Moon Rise</string>
    <string name="moon_transit_text_view">Moon Transit</string>
    <string name="moon_set_text_view">Moon Set</string>
    <string name="empty_text_view">--:--</string>
    <string name="my_location">Custom Location</string>
    <string name="custom_location">Custom Location</string>
    <string name="location_toggle_text">Custom Location</string>
    <string name="custom_lat_hint">Latitude</string>
    <string name="custom_long_hint">Longitude</string>
    <string name="get_date_picker_button_text">Choose Date</string>
    <string name="get_map_text">Choose Location</string>
    <string name="calculate_moon_position_button_text">Calculate</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_select_button_string">Select Location</string>
    <string name="title_activity_maps_moon_path">MapsActivityMoonPath</string>
    <string name="view_on_map">View on Map</string>
    <string name="select_location">Select Location</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="moon_rise">Moon Rise</string>
    <string name="app_icon">app_icon</string>
    <string name="back_to_main_screen_button">Back to main screen button</string>
    <string name="google_maps_date_picker">Google Maps date picker</string>
    <string name="application_icon">Application Icon</string>
    <string name="title_activity_camera_find_moon">CameraFindMoon</string>
</resources>